Portfolio file update

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,16 @@
                 <h3>Soccer</h3>
 
             </div>
-            <div class="sports">
+            <!-- <div class="sports">
                 <img src="assets/images/fish.jpeg" alt="Fishing">
                 <h3>Fishing</h3>
+            </div> -->
+      
+            <div class="sports">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJgKNL0ANW5extC3s5iOH3XZ8ByXuGe17BEFpxnuuzZBgnfFk_3A" alt="Liri">
+                <h3> <a href="https://smiotti.github.io/liri-node-app/" id="liri"> Liri Bot </h3>
             </div>
+
 
         </div>
 
